@startuml
' 설정
title 단위 변환기 (UnitConverter) 클래스 다이어그램
skinparam classAttributeIconSize 0

' 인터페이스 정의
interface UnitDefinition {
    + unit: string
    + unitValue: number (Relative)
}

interface ComplexValueInput {
    + value: number
    + unit: UnitDefinition[]
}

' 클래스 정의
class UnitConverter {
    - units: UnitDefinition[]
    
    + constructor()
    + registerUnit(units: UnitDefinition[]): void
    - getAbsoluteUnits(units: UnitDefinition[]): UnitDefinition[]
    + convertTo(value: number, fromUnit: string, toUnit: string): number
    + formatBest(input: number | ComplexValueInput, fixedUnits?: UnitDefinition[]): string
    + getUnits(): UnitDefinition[]
}

class ComputerCapacityConverter {
    + constructor()
}

class PowerCapacityConverter {
    + constructor()
}

class PowerUsageConverter {
    + constructor()
}

class DistanceConverter {
    + constructor()
}

' 상속 및 관계 정의
UnitConverter <|-- ComputerCapacityConverter
UnitConverter <|-- PowerCapacityConverter
UnitConverter <|-- PowerUsageConverter
UnitConverter <|-- DistanceConverter

UnitConverter ..> UnitDefinition : 사용
UnitConverter ..> ComplexValueInput : 사용

note right of UnitConverter
  <b>UnitConverter</b>
  - 단위 변환 로직의 Base Class
  - 상대적 배수(Relative Step) 로직 사용
end note

note bottom of DistanceConverter
  <b>Example</b>
  - mm (1)
  - cm (10)
  - m (100)
  - km (1000)
end note

@enduml
